--- a/src/styles.css
+++ b/src/styles.css
@@ -10,13 +10,22 @@ html {
   overflow: hidden;
 }
 
-.button-container{
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  overflow: auto; /* Ensure the body can scroll if the content is too large */
+  cursor: url('./assets/mallet.png'), auto; 
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 h1 {
   text-align: center;
-  font-size: 90px;
+  font-size: 50px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
   color: white;
   -webkit-text-stroke: 2px black;
@@ -44,7 +53,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  /*cursor: url('./assets/mallet.png'), pointer;*/
+  cursor: url('FINALMOLEWHACK-MAIN/assets/mallet.png'), auto;
 }
 
 .hole {
